Fix Popup Wrapper Z-Index

--- a/swiftguesser/style.css
+++ b/swiftguesser/style.css
@@ -445,7 +445,6 @@ li::marker {
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 1;
 }
 
 #popup-background {
